@@ -6,4 +6,4 @@ Objects
     Creates a property caching its result in object attribute with name prefixed with ``_``.
 
 
-.. decorator:: @monkey(cls)
+.. decorator:: @monkey(cls_or_module)
