@@ -1,5 +1,6 @@
 - added ints and slices to extended fn semantics
 - added extended semantics to *_fn(), compose(), complement and i?juxt()
+- can now @monkey() patch modules
 
 0.5.0
 - added type testing utilities
